2008-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* OperatorEqualsShouldBeOverloadedRule.cs: Fix Problem/Solution
	attributes to match the rule. Found by Ben Motmans.

2008-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingMethodToPropertyRule.cs: Don't apply the rule
	to overrides. Don't check Set* methods but report them if we find an
	appropriate Get* method (single defect).

2008-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementEqualsAndGetHashCodeInPairRule.cs: Fix message (spotted
	by Andy Hume).

2008-04-08  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* TypesWithDisposableFieldsShouldBeDisposableRule.cs: Fixed a typo.

2008-04-03  Daniel Abramov <ex@vingrad.ru>

	* ImplementGenericCollectionInterfacesRule.cs: New rule to check
	if the class implementing IEnumerable implements IEnumerable<T>
	too (only for .NET 2.0+).
	* Gendarme.Rules.Design.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to the build.

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementIComparableCorreclyRule.cs: New. Rule to check that 
	IComparable, and it's generic version: IComparable<T>, are 
	implemented correctly, i.e. override Equals and provide the ==, 
	!=, < and > operators.
	* Gendarme.Rules.Design.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to the build.

2008-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidPublicInstanceFieldsRule.cs: Ignore code generated by CSC 
	for anonymous types (i.e. inner type that defines public fields).

2008-03-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add reference to Test.Rules to the unit test assembly.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypesWithDisposableFieldsShouldBeDisposableRule.cs: Don't check
	code generated by compilers or tools since the developer cannot do
	(much) on them.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 
